[:has() pseudo-class] :has() selector does not render on first pass? https://bugs.webkit.org/show_bug.cgi?id=234531

Reviewed by Simon Fraser.

Source/WebCore:

With :has() identical sibling elements can have different style which breaks the current
assumptions of the style sharing optimization.

Test: fast/selectors/has-style-sharing.html

* style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::resolve):

Disable style sharing in presence of :has() rules for now.

For a less heavy-handed approach we need to start testing for :has() rules similar to what is already done
for sibling and attribute rules.

LayoutTests:

Test case by Alex Riviere.

* fast/selectors/has-style-sharing-expected.html: Added.
* fast/selectors/has-style-sharing.html: Added.



Canonical link: https://commits.webkit.org/245504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287362 268f45cc-cd09-0410-ab3c-d52691b4dbfc